@@ -1,2 +1,3 @@
 *~
 tmp/*
+config/config.rb
