@@ -1,0 +1,5 @@
+
+
+
+# $url = "http://172.16.237.254/rhel6"
+$url = "http://192.168.56.254/rhel6"
