@@ -1,0 +1,7 @@
+    $pkglist = ["storage-client-fcoe", "infiniband", "java-platform", "perl-runtime", "storage-client-iscsi", "client-mgmt-tools", "console-internet", "storage-client-multipath", "smart-card", "security-tools", "dial-up", "directory-client", "debugging", "network-tools", "network-file-system-client", "hardware-monitoring", "backup-client", "performance", "base", "mainframe-access", "legacy-unix", "compat-libraries", "print-client", "large-systems", "scientific", "", "cifs-file-server", "ftp-server", "nfs-file-server", "server-platform", "system-admin-tools", "directory-server", "network-server", "storage-server", "backup-server", "print-server", "identity-server", "mail-server", "", "php", "turbogears", "web-server", "web-servlet", "", "mysql", "mysql-client", "postgresql", "postgresql-client", "", "system-management-snmp", "system-management-wbem", "system-management", "system-management-messaging-server", "system-management-messaging-client", "", "virtualization", "virtualization-client", "virtualization-tools", "virtualization-platform", "", "kde-desktop", "x11", "graphical-admin-tools", "basic-desktop", "desktop-debugging", "desktop-platform", "fonts", "remote-desktop-clients", "legacy-x", "input-methods", "general-desktop", "", "emacs", "tex", "internet-browser", "graphics", "technical-writing", "", "eclipse", "additional-devel", "server-platform-devel", "desktop-platform-devel", "development", "", "icelandic-support", "irish-support", "azerbaijani-support", "assamese-support", "afrikaans-support", "amazigh-support", "arabic-support", "albanian-support", "armenian-support", "italian-support", "inuktitut-support", "interlingua-support", "indonesian-support", "welsh-support", "ukrainian-support", "uzbek-support", "urdu-support", "estonian-support", "esperanto-support", "ethiopic-support", "dutch-support", "oriya-support", "kazakh-support", "kashmiri-support", "kashubian-support", "catalan-support", "kannada-support", "galician-support", "greek-support", "khmer-support", "kurdish-support", "croatian-support", "gujarati-support", "georgian-support", "gaelic-support", "xhosa-support", "coptic-support", "konkani-support", "sardinian-support", "sanskrit-support", "sindhi-support", "sinhala-support", "swedish-support", "spanish-support", "slovak-support", "slovenian-support", "swati-support", "swahili-support", "zulu-support", "serbian-support", "somali-support", "tsonga-support", "thai-support", "tagalog-support", "tajik-support", "tamil-support", "czech-support", "chichewa-support", "tibetan-support", "chhattisgarhi-support", "tswana-support", "tetum-support", "telugu-support", "danish-support", "turkmen-support", "turkish-support", "german-support", "southern-ndebele-support", "nepali-support", "norwegian-support", "hungarian-support", "basque-support", "punjabi-support", "hiligaynon-support", "hindi-support", "fijian-support", "filipino-support", "finnish-support", "faroese-support", "french-support", "friulian-support", "frisian-support", "brazilian-support", "bulgarian-support", "breton-support", "bhutanese-support", "hebrew-support", "vietnamese-support", "belarusian-support", "bengali-support", "venda-support", "persian-support", "portuguese-support", "polish-support", "maithili-support", "maori-support", "macedonian-support", "malagasy-support", "malayalam-support", "marathi-support", "maltese-support", "malay-support", "manx-support", "burmese-support", "mongolian-support", "lao-support", "latin-support", "latvian-support", "lithuanian-support", "luxembourgish-support", "kinyarwanda-support", "romanian-support", "occitan-support", "russian-support", "walloon-support", "chinese-support", "low-saxon-support", "northern-sotho-support", "southern-sotho-support", "japanese-support", "british-support", "korean-support", "upper-sorbian-support"]
+
+$ports = ["amanda-client","bacula","bacula-client","dns","ftp","ipsec","nfs","openvpn","radius","cluster-suite","ssh","imaps","pop3s","samba","samba-client","tftp","tftp-client","http","ipp-client","ipp","mdns","smtp","libvirt","libvirt-tls","https"]
+$srvs = [{"srv"=>"ipp-client", "ports"=>[["631", "udp"]]}, {"srv"=>"ipp", "ports"=>[["631", "tcp"], ["631", "udp"]]}, {"srv"=>"mdns", "ports"=>[["5353", "udp"]]}, {"srv"=>"ipsec", "ports"=>[["500", "udp"]]}, {"srv"=>"nfs", "ports"=>[["2049", "tcp"]]}, {"srv"=>"https", "ports"=>[["443", "tcp"]]}, {"srv"=>"samba-client", "ports"=>[["137", "udp"], ["138", "udp"]]}, {"srv"=>"samba", "ports"=>[["137", "udp"], ["138", "udp"], ["139", "tcp"], ["445", "tcp"]]}, {"srv"=>"dns", "ports"=>[["53", "tcp"], ["53", "udp"]]}, {"srv"=>"imaps", "ports"=>[["993", "tcp"]]}, {"srv"=>"pop3s", "ports"=>[["995", "tcp"]]}, {"srv"=>"radius", "ports"=>[["1812", "udp"], ["1813", "udp"]]}, {"srv"=>"openvpn", "ports"=>[["1194", "udp"]]}, {"srv"=>"tftp", "ports"=>[["69", "udp"]]}, {"srv"=>"tftp-client", "ports"=>nil}, {"srv"=>"cluster-suite", "ports"=>[["5404", "udp"], ["5405", "udp"], ["11111", "tcp"], ["21064", "tcp"]]}, {"srv"=>"amanda-client", "ports"=>[["10080", "udp"]]}, {"srv"=>"bacula-client", "ports"=>[["9102", "tcp"]]}, {"srv"=>"bacula", "ports"=>[["9101", "tcp"], ["9102", "tcp"], ["9103", "tcp"]]}, {"srv"=>"libvirt", "ports"=>[["16509", "tcp"]]}, {"srv"=>"libvirt-tls", "ports"=>[["16509", "tcp"]]}]
+
+
+
